release: promote active backend to main (#42)
* fix: extend business session idle timeout to eight hours

* fix: retain valid existing administrator scopes in assignment options

* feat: generate regional agriculture profiles

* feat: automate regional agriculture evidence and forecasts

* fix: grant runtime regional evidence access

* fix: parse live regional source payloads

* feat: add professional regional agriculture intelligence

* fix: grant runtime regional indicator access

* feat: derive traceable regional agriculture indicators

* feat: distinguish changed regional source refreshes

* feat: collect regional public indicators with evidence-based projections

* feat: distinguish regional grain flows from rail freight

* fix: avoid attributing combined freight totals to road transport

* fix: bound regional downloads and isolate scheduled collection

* fix: recover rice estimates using same-year area and public output

* feat: persist independent current estimates and public-search verification

* fix: allow runtime registration of discovered public sources

* fix: discover historical report periods without mixing county scopes

* feat: recalculate regional hierarchy estimates with traceable allocation

* fix: recover missed daily refresh and fill missing crop reference scenarios

* fix: retain original source links throughout regional estimate lineage

* fix: validate regional source evidence and withdraw superseded facts

* fix: scope regional comparisons to requested geography and year

* fix: retain derived regional yield evidence

* feat: serve selected-region railway facilities and tracks

* fix: safely follow discovered source redirects

* fix: add application runtime truststore

* fix: resolve runtime truststore from selected JVM home

* test: align regional profile expectations

* feat: open reporting read create and update to enabled accounts

* fix: preserve scoped authorization for voiding business records

* fix(validation): preserve field reaso